[tool.poetry]
name = "hackassembler"
version = "0.1.0"
description = "Assembler program for the hack computer."
authors = ["Zan Owsley <zanowsley@gmail.com>"]
readme = "README.md"
repository = "https://github.com/DanZanzibar/hackassembler.git"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"